<resources>
    <string name="app_name">Kalkulator</string>
    <string name="title">Kalkulator</string>
    <string name="simple">Prosty</string>
    <string name="advanced">Zaawansowany</string>
    <string name="info">Info</string>
    <string name="exit">Wyjście</string>
    <string name="backspace">Usuń</string>
    <string name="delete">C</string>
    <string name="plus_minus">±</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="squared">x²</string>
    <string name="power">xⁿ</string>
    <string name="log">log</string>
    <string name="brackets">( )</string>
</resources>
