<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.CalculatorApp.SimpleActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="14dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backspace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint=" #ff6666"
                android:text="@string/backspace"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="381dp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:backgroundTint="@color/grey"
                android:text="@string/delete"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="382dp" />

            <Button
                android:id="@+id/plus_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:text="@string/plus_minus"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="291dp"
                tools:layout_editor_absoluteY="382dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="381dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="382dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="382dp" />

            <Button
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:backgroundTint="@color/grey"
                android:text="@string/division"
                android:textSize="24sp"
                tools:ignore="ButtonSty1le"
                tools:layout_editor_absoluteX="291dp"
                tools:layout_editor_absoluteY="382dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="204dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:backgroundTint="@color/grey"
                android:text="@string/multiplication"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="292dp"
                tools:layout_editor_absoluteY="428dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="476dp" />

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="476dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="476dp" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/subtraction"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="291dp"
                tools:layout_editor_absoluteY="476dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="524dp" />

            <Button
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="524dp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint=" #66ff66"
                android:text="@string/equal"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="524dp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/addition"
                android:textSize="24sp"
                tools:ignore="ButtonStyle"
                tools:layout_editor_absoluteX="291dp"
                tools:layout_editor_absoluteY="524dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
